--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -101,7 +101,7 @@
    
                 </button>
 
-                <button id="bttn_canvas" class="btn btn-lg btn-outline-secondary rounded-circle" onclick="window.open(' https://8de0-2600-6c64-4ef0-7820-25ab-bea9-df30-5464.ngrok-free.app', '_blank')">
+                <button id="bttn_canvas" class="btn btn-lg btn-outline-secondary rounded-circle" onclick="window.open('http://localhost:8000/', '_blank')">
                     <i class="fa-solid fa-palette"></i>
                 </button>
 
