--- a/templates/chatroom_checkpoint.html
+++ b/templates/chatroom_checkpoint.html
@@ -23,7 +23,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDU-HIVE [{{room_id}}]</title>
+    <title>EDU-NET [{{room_id}}]</title>
 </head>
 <body>
     {% extends 'base.html' %}
@@ -33,7 +33,7 @@
     <!-- Add any dashboard-specific content here -->
 
     <div class="heading mb-4">
-        <h1 class="display-4">EDU-HIVE</h1>        
+        <h1 class="display-4">EDU-NET</h1>        
         <h4>You are about to join room: <span class="heading-mark">{{room_id}}</span></h4>
     </div>
 
