--- a/templates/explore.html
+++ b/templates/explore.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <title>EDU-HIVE | Explore Tutors</title>
+    <title>EDU-NET | Explore Tutors</title>
 </head>
 <body>
     {% extends 'base.html' %}
@@ -20,7 +20,7 @@
 
     <!-- Heading -->
     <div class="heading text-center my-4">
-        <h1 class="display-4">EDU-HIVE</h1>
+        <h1 class="display-4">EDU-NET</h1>
         <p class="lead">Explore Tutors and Find the Right One for You!</p>
     </div>
 
