--- a/templates/tutor_dashboard.html
+++ b/templates/tutor_dashboard.html
@@ -8,7 +8,7 @@
 <body>
     {% extends 'base.html' %}
 
-    {% block title %}Student Dashboard{% endblock %}
+    {% block title %}Tutor Dashboard{% endblock %}
     
     {% block content %}
     <h1>Welcome to your dashboard, {{ current_user.username }}!</h1>
