--- a/templates/signup.html
+++ b/templates/signup.html
@@ -73,7 +73,8 @@
                     </div>
                         <button type="submit" class="btn btn-primary btn-block">Submit</button>
                 </form>
-                <a style="justify-content: center;" href="{{ url_for('login') }}" >Login</a>
+                <br>
+                <a class="btn btn-primary btn-block" style="justify-content: center;" href="{{ url_for('login') }}" >Login Page</a>
             
 </body>
 </html>
