--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,3 +1,12 @@
+<!--
+____   ____ ___  ____  ____ ___ ___  _   _
+/ ___| / ___/ _ \|  _ \|  _ \_ _/ _ \| \ | |
+\___ \| |  | | | | |_) | |_) | | | | |  \| |
+___) | |__| |_| |  _ <|  __/| | |_| | |\  |
+|____/ \____\___/|_| \_\_|  |___\___/|_| \_|
+www.dhiren.pro
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,7 +14,6 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <!--<title>SRCCF</title>-->
   <title>{{title}}</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
