--- a/templates/landing.html
+++ b/templates/landing.html
@@ -848,6 +848,9 @@ p:last-child{
           <h1 style="color:rgba(222,196,99,255);font-size:25px;">EDU-NET</h1>
           <div>
             <h2>Bridging Knowledge, Connecting Minds.</h2>
+            <div>
+              <a href="{{ url_for('login') }}" class="btn-get-started scrollto">Sign Up</a>
+            </div>
           </div>
 
         </div>
