--- a/templates/edit_tutor.html
+++ b/templates/edit_tutor.html
@@ -21,7 +21,7 @@
         
         <h4>Subjects Offered</h4>
         <ul class="list-group">
-            {% for subject in tutor[3] %}
+            {% for subject in tutor[4] %}
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     <form onsubmit="return confirm('Are you sure?');" action="{{ url_for('edit_tutor', tutor_id=tutor[0]) }}" method="POST" class="form-inline mr-3">
                         <div class="form-group mr-3">
@@ -43,6 +43,21 @@
                     </form>
                 </li>
             {% endfor %}
+
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <form onsubmit="return confirm('Are you sure?');" action="{{ url_for('edit_core_tutor', tutor_id=tutor[0]) }}" method="POST" class="form-inline mr-3">
+                    <div class="form-group mr-3">
+                        <label hidden for="username" class="mr-2"><strong>Username:</strong></label>
+                        <input hidden type="text" name="username" class="form-control" value="{{ tutor[1] }}" required >
+                        <label hidden for="email" class="mr-2"><strong>Email:</strong></label>
+                        <input hidden type="text" name="email" class="form-control" value="{{ tutor[2] }}" required >
+                        
+                        <label for="about" class="mr-2"><strong>About:</strong></label>
+                        <input type="text" name="about" class="form-control" value="{{ tutor[3] }}" required>
+    
+                    </div>
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </form>
         </ul>
 
         <a href="/" class="btn btn-secondary mt-3">Back to Home</a>
