--- a/templates/tutorprofile.html
+++ b/templates/tutorprofile.html
@@ -20,7 +20,8 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title">{{ tutors.username }}</h2>
+                <h2 class="card-title">{{ tutors[0]['username'] }}</h2>
+                <h6 class="card-title">{{ tutors[0]['about'] }}</h6>
                 <h4>Courses:</h4>
                 {% if tutors and tutors | length > 0 %}
                     <ul class="list-group mb-3">
@@ -45,8 +46,8 @@
                 {% else %}
                     <p>No subjects listed</p>
                 {% endif %}
-                <p class="card-text">Additional details about the tutor can go here.</p>
-                <a href="{{ url_for('explore', user_id=current_user.id)}}" class="btn btn-secondary">Back to Explore</a>
+                
+               <a href="{{ url_for('explore', user_id=current_user.id)}}" class="btn btn-secondary">Back to Explore</a>
             </div>
         </div>
     </div>
