--- a/templates/addgig.html
+++ b/templates/addgig.html
@@ -22,6 +22,16 @@
                 <label for="name">Your Name</label>
                 <input type="text" class="form-control" id="name" name="name" value="{{ tutor.username}}" readonly required>
             </div>
+
+            <div class="form-group">
+                <label for="about">About Tutor/Subject 
+                    <small class="form-text text-muted">
+                        You can add details about your expertise or link your LinkedIn profile to help students understand more about you.
+                    </small>
+                </label>
+                <input type="text" class="form-control" value="{{ tutor.about}}" id="about" name="about" required readonly>
+            </div>
+
             <div class="form-group">
                 <label for="subject">Subject</label>
                 <input type="text" class="form-control" id="subject" name="subject" required>
@@ -31,14 +41,7 @@
                 <input type="number" class="form-control" id="cost" name="cost" required>
             </div>
 
-            <div class="form-group">
-                <label for="about">About Tutor/Subject 
-                    <small class="form-text text-muted">
-                        You can add details about your expertise or link your LinkedIn profile to help students understand more about you.
-                    </small>
-                </label>
-                <input type="text" class="form-control" value="{{ tutor.about}}" id="about" name="about" required>
-            </div>
+          
             
             <button type="submit" class="btn btn-primary">Add Gig</button>
         </form>
