--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EDU-NET</title>
+    <title>EDU-HIVE</title>
 </head>
 <body>
     {% extends 'base.html' %}
@@ -30,10 +30,10 @@
     <p>Here you can explore tutors, manage sessions, and more.</p>
     <!-- Add any dashboard-specific content here -->
     <div class="heading mb-4">
-        <h1 class="display-4">EDU-NET</h1>
+        <h1 class="display-4">EDU-HIVE</h1>
     </div>
     <div class="container text-center mt-5">
-        <h4>Welcome to EDU-NET!</h4>
+        <h4>Welcome to EDU-HIVE!</h4>
         <p>
             Enter a custom room name, and click join! <br> 
             Share the room name with your friends, so that they can join too!
