--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -41,7 +41,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
                      
-    <title>EDU-NET [{{room_id}}]</title>
+    <title>EDU-HIVE [{{room_id}}]</title>
     
     <style>
         
@@ -66,7 +66,7 @@
 <!-- Add any dashboard-specific content here -->
 
     <div class="heading mb-4">
-        <h1 class="display-4">EDU-NET</h1>
+        <h1 class="display-4">EDU-HIVE</h1>
         <div class="room-info">
             <h3>Room: <span class="heading-mark">{{room_id}}</span></h3>
             <h5>You have joined as <span class="heading-mark">{{display_name}}</span></h5>
