--- a/templates/landing.html
+++ b/templates/landing.html
@@ -390,7 +390,7 @@ p:last-child{
         <!--<h1><a href="index.html">2024</a></h1>
          Uncomment below if you prefer to use an image logo 
         <a href="index.html"><img src="static/img/logo.png" alt="" class="img-fluid"></a>-->
-        <h1><a href="#hero">EDU-NET</a></h1>
+        <h1><a href="#hero">EDU-HIVE</a></h1>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -434,7 +434,7 @@ p:last-child{
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 style="color:rgba(222,196,99,255);font-size:25px;">EDU-NET</h1>
+          <h1 style="color:rgba(222,196,99,255);font-size:25px;">EDU-HIVE</h1>
           <div>
             <h2>Bridging Knowledge, Connecting Minds.</h2>
             <div>
@@ -474,7 +474,7 @@ p:last-child{
       <div class="container">
         <div class="section-title" data-aos="zoom-out">
           <h2>About</h2>
-          <p>EDU-NET</p>
+          <p>EDU-HIVE</p>
         </div>
         <div class="row content" data-aos="fade-up" style="text-align: justify;">
           <div class="col-lg-6">
@@ -791,7 +791,7 @@ p:last-child{
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container" style="text-align:center;">
-      <h3>EDU-NET</h3>
+      <h3>EDU-HIVE</h3>
       <p style="color:rgba(222,196,99,255);">"Bridging Knowledge, Connecting Minds."</p>
      <div class="copyright" style="color:rgba(222,196,99,255);text-align:center;">
         &copy; Copyright <strong><span>S.I.A</span></strong>. All Rights Reserved
