about error fixed
If about is empty there was an error. for tutors witout it, it has been edited.

--- a/templates/edit_tutor.html
+++ b/templates/edit_tutor.html
@@ -67,7 +67,7 @@
             You can add details about your expertise or link your LinkedIn profile to help students understand more about you.
         </small>
 
-        <a href="/" class="btn btn-secondary mt-3">Back to Home</a>
+        <a href="/login" class="btn btn-secondary mt-3">Back to Home</a>
     </div>
     {% endblock %}
 </body>
