--- a/templates/subscribed.html
+++ b/templates/subscribed.html
@@ -39,7 +39,7 @@
         {% else %}
             <p class="text-muted">No subscriptions found.</p>
         {% endif %}
-        <a href="/" class="btn btn-secondary mt-3">Back to Home</a>
+        <a href="/login" class="btn btn-secondary mt-3">Back to Home</a>
     </div>
     {% endblock %}
 </body>
