--- a/templates/landing.html
+++ b/templates/landing.html
@@ -758,7 +758,7 @@ p:last-child{
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="static/img/team/team-1.jpg" class="img-fluid" alt="" style="width:350px;height:250px;">
+                <img src="https://lh3.googleusercontent.com/a/ACg8ocKGsCLeE-e4V-DA0fbf0K0POnlGWxpU_p8SxmchPKWqzpaA58Lc=s288-c-no" class="img-fluid" alt="" style="width:350px;height:250px;">
                 <div class="social">
                     <a href="https://www.linkedin.com/in/ddommeti"><i class="bi bi-award-fill"></i></a>
                 </div>
