--- a/templates/addgig.html
+++ b/templates/addgig.html
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label for="about">About Tutor/Subject 
                     <small class="form-text text-muted">
-                        You can add details about your expertise or link your LinkedIn profile to help students understand more about you.
+                        In Edit Profile you can add details about your expertise or link your LinkedIn profile to help students understand more about you.
                     </small>
                 </label>
                 <input type="text" class="form-control" value="{{ tutor.about}}" id="about" name="about" required readonly>
